solving the slipping navbar issue on tablet

--- a/styles/_blog-posts.scss
+++ b/styles/_blog-posts.scss
@@ -47,6 +47,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   margin-bottom: 1rem;
+  width: 90%;
   // arrows
   img {
     background-color: $base-light-color;
